RESOLVED FIXED129717
DFGStoreBarrierElisionPhase should should GCState directly instead of m_gcClobberSet when calling writesOverlap()
https://bugs.webkit.org/show_bug.cgi?id=129717
Summary DFGStoreBarrierElisionPhase should should GCState directly instead of m_gcClo...
Filip Pizlo
Reported 2014-03-04 16:44:29 PST
...
Attachments
Patch (1.85 KB, patch)
2014-03-05 08:29 PST, Mark Hahnenberg
no flags
Mark Hahnenberg
Comment 1 2014-03-05 08:29:39 PST
WebKit Commit Bot
Comment 2 2014-03-05 09:38:15 PST
Comment on attachment 225888 [details] Patch Clearing flags on attachment: 225888 Committed r165112: <http://trac.webkit.org/changeset/165112>
WebKit Commit Bot
Comment 3 2014-03-05 09:38:17 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.